--- a/Aysha/templates/homepage.html
+++ b/Aysha/templates/homepage.html
@@ -39,11 +39,11 @@
                         <form action="" class="form-inline justify-content-center">
                             <div class="form-group">
                                 <label class="sr-only">Name</label>
-                                <input type="text" class="form-control" placeholder="Jane Doe">
+                                <input type="text" class="form-control" placeholder="Jennifer Anningston">
                             </div>
                             <div class="form-group">
                                 <label class="sr-only">Email</label>
-                                <input type="text" class="form-control" placeholder="jane.doe@example.com">
+                                <input type="text" class="form-control" placeholder="jen.ann@example.com">
                             </div>
                             <button type="submit" class="btn btn-success ">okay, go!</button>
                         </form>
