--- a/Aysha/templates/homepage.html
+++ b/Aysha/templates/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bootsrap Navbars</title>
+	<title>My blog</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<style>
 		html,
